# payment

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  service.nomad
migrations/: V1__stripe_accounts.sql  V2__stripe_accounts_rename_market_booth_id.sql
src/: auth.rs  commerce.rs  db.rs  lib.rs  main.rs  zitadel.rs
src/api/: FILE_DESCRIPTOR_SET  mod.rs  peoplesmarkets.commerce.v1.rs  peoplesmarkets.media.v1.rs  peoplesmarkets.ordering.v1.rs  peoplesmarkets.payment.v1.rs  peoplesmarkets.payments.v1.rs  sited_io.commerce.v1.rs  sited_io.media.v1.rs  sited_io.payment.v1.rs  sited_io.types.v1.rs
src/model/: mod.rs  stripe_account.rs
src/services/: countries.rs  mod.rs  stripe_service.rs
