[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = { version = "0.22.2", default-features = false, features = [
  "runtime-tokio-hyper",
  "connect",
] }
base64 = { version = "0.21.3", default-features = false }
http = { version = "0.2.9", default-features = false }
jwtk = { version = "0.3.0", default-features = false, features = ["remote-jwks"] }
prost = { version = "0.12.0", default-features = false }
reqwest = { version = "0.11.20", default-features = false }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt"] }
tonic = { version = "0.10.0", default-features = false, features = [
  "transport",
] }
tonic-health = { version = "0.10.0", default-features = false, features = ["transport"] }
tonic-reflection = { version = "0.10.0", default-features = false }
tonic-web = { version = "0.10.0", default-features = false }
tower-http = { version = "0.4.4", default-features = false, features = [
  "cors",
  "trace",
] }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "tracing-log",
  "fmt",
] }

[build-dependencies]
tonic-build = { version = "0.10.0", default-features = false, features = [
  "prost",
] }
