[package]
name = "payment"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = { version = "0.38", default-features = false, features = [
  "runtime-tokio-hyper",
  "connect",
  "checkout",
] }
chrono = { version = "0.4.30", default-features = false, features = ["clock"] }
deadpool-postgres = { version = "0.10.5", default-features = false, features = [
  "rt_tokio_1",
] }
http = { version = "1.1.0", default-features = false }
jwtk = { version = "0.3.0", default-features = false, features = [
  "remote-jwks",
] }
openssl = { version = "0.10.57", features = ["vendored"] }
postgres-openssl = "0.5.0"
prost = { version = "0.13.2", default-features = false }
refinery = { version = "0.8.10", default-features = false, features = [
  "tokio-postgres",
] }
reqwest = { version = "0.11.20", default-features = false }
sea-query = { version = "0.30.1", default-features = false, features = [
  "derive",
  "backend-postgres",
] }
sea-query-postgres = { version = "0.4.0", default-features = false, features = [
  "with-uuid",
  "with-chrono",
] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt"] }
tonic = { version = "0.12.2", default-features = false, features = [
  "transport",
  "tls",       # very importante
  "tls-roots", # very importante
] }
tonic-health = { version = "0.12.2", default-features = false, features = [
  "transport",
] }
tonic-reflection = { version = "0.12.2" }
tonic-web = { version = "0.12.2", default-features = false }
tower-http = { version = "0.5.2", default-features = false, features = [
  "cors",
  "trace",
] }
tracing = { version = "0.1.37", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "tracing-log",
  "fmt",
] }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.12.2", default-features = false, features = [
  "prost",
  "transport",
] }
